fix: editor buttons overlapping instructions modal

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--black-background);
-  z-index: 1;
+  z-index: 3;
 }
 
 .modal {
